# cookiecutter-templates

haskell-nix/: cookiecutter.json
haskell-nix/{{cookiecutter.project_name}}/: cabal.project.freeze  flake.nix  {{cookiecutter.binary_name}}.cabal
haskell-nix/{{cookiecutter.project_name}}/nix/: package.nix  treefmt.nix
haskell-nix/{{cookiecutter.project_slug}}/: {{cookiecutter.binaryName}}.cabal
templates/haskell-nix/: cookiecutter.json
templates/haskell-nix-package-rio/: cookiecutter.json
templates/haskell-nix-package-rio/{{cookiecutter.project_slug}}/: Main.hs  default.nix
templates/haskell-nix/hooks/: post_gen_project.sh
templates/haskell-nix/{{cookiecutter.project_slug}}/: Main.hs  default.nix  flake.nix  package.nix  {{cookiecutter.binaryName}}.cabal
templates/haskell-script/hooks/: post_gen_project.sh
templates/haskell-script/{{cookiecutter.project_slug}}/: .gitignore  Main.hs  {{cookiecutter.binaryName}}.cabal
